--- a/index.html
+++ b/index.html
@@ -238,6 +238,13 @@
                     杭州南普科技
                 
             </div>
+            <div>
+            <form class="search_form">
+                <a href="#searchModal" class="modal-trigger waves-effect waves-light">
+            <input  type="text" id="searchIcon" class="fa fa-search" title="搜索" placeholder="请输入搜索内容">::before</input>
+        </a>
+    </form>
+            </div>
 
             <div class="description center-align">
                 
