--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
                 
             </div>
             <div>
-            <form class="search_form">
+            <form>
                 <a href="#searchModal" class="modal-trigger waves-effect waves-light">
-            <input  type="text" id="searchIcon" class="fa fa-search" title="搜索" placeholder="请输入搜索内容">::before</input>
+            <input  type="text" id="searchIcon" class="fa fa-search" title="搜索" placeholder="请输入搜索内容"></input>
         </a>
     </form>
             </div>
